// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> Component should be show categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Manzana"
    key="Manzana"
  />
  <GifGrid
    category="Naranja"
    key="Naranja"
  />
  <GifGrid
    category="Pera"
    key="Pera"
  />
</Fragment>
`;

exports[`<GifExpertApp /> Component should be show component 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
